--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,6 @@
     <string name="email">Email</string>
     <string name="signIn">Sign in</string>
     <string name="sign_In">Sign in</string>
+    <string name="toast">Successfully signed up!)</string>
+    <string name="tv_pwd_1">Password</string>
 </resources>
