--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="pwd_hint">Password</string>
     <string name="email_et">Email</string>
     <string name="first_et">First Name</string>
+    <string name="title_activity_signup_trial">SignupTrial</string>
 </resources>
